RESOLVED FIXED194496
[WinCairo][MiniBrowser] Basic authentication always fails.
https://bugs.webkit.org/show_bug.cgi?id=194496
Summary [WinCairo][MiniBrowser] Basic authentication always fails.
Takashi Komori
Reported 2019-02-11 03:07:16 PST
WinCairo MiniBrowser always fails basic authentication. This is because of misusing of GetWindowText function.
Attachments
Patch (1.19 KB, patch)
2019-02-11 03:11 PST, Takashi Komori
no flags
Takashi Komori
Comment 1 2019-02-11 03:11:57 PST
WebKit Commit Bot
Comment 2 2019-02-11 09:29:44 PST
Comment on attachment 361670 [details] Patch Clearing flags on attachment: 361670 Committed r241266: <https://trac.webkit.org/changeset/241266>
WebKit Commit Bot
Comment 3 2019-02-11 09:29:45 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-02-11 09:30:42 PST
Note You need to log in before you can comment on or make changes to this bug.