[WinCairo][MiniBrowser] Basic authentication always fails. https://bugs.webkit.org/show_bug.cgi?id=194496

Patch by Takashi Komori <Takashi.Komori@sony.com> on 2019-02-11
Reviewed by Don Olmstead.

* MiniBrowser/win/DialogHelper.h:
(Dialog::getText):

Canonical link: https://commits.webkit.org/208925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241266 268f45cc-cd09-0410-ab3c-d52691b4dbfc